--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,8 @@
+<%= form_for @product do |f| %>
+Name: <%= f.text_field :name %> <br>
+Price: <%= f.text_field :price %> <br>
+Inventory: <%= f.number_field :inventory %> <br>
+Description: <%= f.text_area :description %> <br>
 
+<%= f.submit %>
+<% end %>
