--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,26 @@
+<h2>Products</h2>
+  <% @products.each do |product| %>
+    <h2><%= product.name %></h2>
+    <div id="product-<%= product.id %>">
+      <p><%= truncate product.description %></p>
+    </div>
+    <button class="js-more" data-id="<%= product.id %>">More Info</button>
+  <% end %>
 
+  <script type="text/javascript" charset="utf-8">
+  $(function () {
+    $(".js-more").on('click', function() {
+      var id = $(this).data("id");
+      $.get("/products/" + id + "/description", function(description) {
+        $.get("/products/" + id + "/inventory", function(inventory) {
+          var inventoryText = "Available"
+          if(inventory === "false") {
+            inventoryText = "Sold Out"
+          };
+          var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>"
+          $("#product-" + id).html(descriptionText)
+        });
+      });
+    });
+  });
+  </script>
