--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,31 @@
+<div>
+    <h1>Products</h1>
+    <ul>
+        <% @products.each do |product| %>
+            <li>
+                <%= product.name %>
+                <div id = "body-<%= product.id %>">
+                    <%= truncate product.description %>
+                </div>
+                <button id="button-<%= product.id %>" class="js-inv" data-id="<%= product.id %>">More Info</button>
+            </li>
+        <% end %>
+    </ul>
+</div>
 
+<script type="text/javascript" charset="utf-8">
+    $(function() {
+        $(".js-inv").on("click", function() {
+            let id = $(this).data("id");
+            $.get("/products/" + id + "/description", function(desc) {
+                $("#body-" + id).text(desc)
+                $.get("/products/" + id + "/inventory", function(inv) {
+                    if(inv === "true")
+                        $("#body-" + id).append(" Available")
+                    else
+                        $("#body-" + id).append(" Sold Out")
+                })
+            })
+        })
+    })
+</script>
